--- a/lone-wolf-app/src/app/components/navigation/navigation.component.scss
+++ b/lone-wolf-app/src/app/components/navigation/navigation.component.scss
@@ -14,6 +14,10 @@
       .mat-tab-label-active {
         font-weight: $bold-amount;
       }
+      .mat-tab-link {
+        color: $dark-gray;
+        opacity: 1;
+      }
     }
     .mat-ink-bar {
       bottom: 30%;
