--- a/lone-wolf-app/src/app/components/navigation/navigation.component.scss
+++ b/lone-wolf-app/src/app/components/navigation/navigation.component.scss
@@ -1,6 +1,9 @@
 @import '../../../styles';
 ::ng-deep{
   .mat-tab-header {
+    .mat-tab-header-pagination {
+      display: none !important;
+    }
     .mat-tab-list {
       height: 120px;
       background: $primary-lilac;
@@ -27,6 +30,66 @@
       z-index: -1;
       background-color: $menu-selection;
       border-radius: 200px;
+    }
+  }
+}
+
+// mobile only styles
+
+@media screen and (max-width: 900px) {
+  .mobile-menu-trigger {
+    background-color: $primary-lilac;
+    justify-content: flex-end;
+    padding: 10px 24px;
+    display: flex;
+
+    .open-menu, div {
+      display: contents;
+      cursor: pointer;
+
+      .svg-inline--fa{
+        height: fit-content;
+        font-size: 68px;
+        margin: auto 0;
+        color: $dark-gray;
+        &.fa-bars{
+          transform: scaleY(1.2) scaleX(1.3);
+          margin-right: -30px;
+          font-size: 44px;
+          z-index: 1;
+        }
+        &.fa-circle{
+          color: $menu-selection;
+        }
+      }
+    }
+  }
+  ::ng-deep{
+    .mat-tab-nav-bar.mat-tab-header {
+      &.opened-menu {
+        height: 40%;
+      }
+      position: absolute;
+      height: 0;
+      transition-duration: .8s;
+      width: 100%;
+
+      .mat-tab-list {
+        height: auto;
+        justify-content: flex-end;
+        background: $primary-lilac80;
+        background: linear-gradient(180deg, rgba(130,127,143,0.8) 0%, rgba(175,171,192,1) 1%, $primary-lilac80 5%, $primary-lilac80 100%);
+        .mat-tab-links {
+          flex-flow: column;
+          .mat-tab-link {
+            justify-content: flex-end;
+          }
+        }
+      }
+
+      .mat-ink-bar {
+        display: none;
+      }
     }
   }
 }
