--- a/lone-wolf-app/src/app/components/sections/about/about.component.html
+++ b/lone-wolf-app/src/app/components/sections/about/about.component.html
@@ -1,1 +1,2 @@
-<h1>about</h1>
+<app-carrusel sectionName="Acerca de"></app-carrusel>
+<app-article text="Acerca de text" image="https://media.istockphoto.com/photos/child-hands-formig-heart-shape-picture-id951945718?k=6&m=951945718&s=612x612&w=0&h=ih-N7RytxrTfhDyvyTQCA5q5xKoJToKSYgdsJ_mHrv0=" layout="right"></app-article>
