--- a/lone-wolf-app/src/app/components/carrusel/carrusel.component.html
+++ b/lone-wolf-app/src/app/components/carrusel/carrusel.component.html
@@ -1,1 +1,29 @@
-<p>carrusel works!</p>
+<mat-carousel
+  timings="500ms ease-in-out"
+  [autoplay]="true"
+  [interval]="6000"
+  color="primary"
+  maxWidth="auto"
+  [proportion]="25"
+  [slides]="5"
+  [loop]="true"
+  [hideArrows]="false"
+  [hideIndicators]="false"
+  [useKeyboard]="true"
+  [useMouseWheel]="false"
+  orientation="ltr"
+>
+  <mat-carousel-slide
+    #matCarouselSlide
+    *ngFor="let slide of slides; let i = index"
+    [image]="slide.image"
+    overlayColor="#00000040"
+    [hideOverlay]="false"
+  ></mat-carousel-slide>
+</mat-carousel>
+<div class="ribbon">
+  <div>
+    <i class="fas fa-circle"></i>
+    <p>{{sectionName}}</p>
+  </div>
+</div>
