Styling re-arrange

--- a/lone-wolf-app/src/app/components/article/article.component.scss
+++ b/lone-wolf-app/src/app/components/article/article.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles';
+
 .article-wrapper {
   padding: 62px 98px 140px;
   display: flex;
@@ -8,7 +10,7 @@
     }
   }
   .spacer-column {
-    width: 75px;
+    width: $horizontal-gutter;
   }
   .text-column {
     width: 100%;
@@ -26,7 +28,7 @@
       width: 100%;
     }
     .spacer-column {
-      height: 35px;
+      height: $vertical-gutter;
     }
     &.fl-r-reverse {
       flex-flow: column-reverse;
