--- a/lone-wolf-app/src/styles.scss
+++ b/lone-wolf-app/src/styles.scss
@@ -20,6 +20,10 @@ $font-size-md: 18px;
 $font-size-lg: 20px;
 $font-size-xl: 22px;
 
+/* Global Vars */
+$vertical-gutter: 35px;
+$horizontal-gutter: 75px;
+
 .bold-text {
   font-weight: $bold-amount;
 }
