--- a/lone-wolf-app/src/app/components/carrusel/carrusel.component.scss
+++ b/lone-wolf-app/src/app/components/carrusel/carrusel.component.scss
@@ -7,7 +7,19 @@
       padding: 0 !important;
     }
     >button {
-      background-color: $menu-selection20;
+      border-bottom: white 2px solid;
+      border-right: white 2px solid;
+      background: transparent;
+      border-radius: 0;
+      transform: rotate(
+          -45deg
+      );
+      &:first-of-type {
+        transform: rotate(135deg) !important;
+      }
+      &:last-of-type {
+        transform: rotate(-45deg) !important;;
+      }
       * {
         visibility: hidden;
       }
