--- a/lone-wolf-app/src/app/components/carrusel/carousel.component.html
+++ b/lone-wolf-app/src/app/components/carrusel/carousel.component.html
@@ -15,8 +15,8 @@
 >
   <mat-carousel-slide
     #matCarouselSlide
-    *ngFor="let slide of slides; let i = index"
-    [image]="slide.image"
+    *ngFor="let slide of images; let i = index"
+    [image]="baseUrl + slide.formats.large.url"
     overlayColor="#00000040"
     [hideOverlay]="false"
   ></mat-carousel-slide>
