--- a/lone-wolf-app/src/styles.scss
+++ b/lone-wolf-app/src/styles.scss
@@ -98,3 +98,6 @@ body{
     display: none;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
