reading data for about page

--- a/lone-wolf-app/src/app/components/sections/about/about.component.html
+++ b/lone-wolf-app/src/app/components/sections/about/about.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="data">
   <app-carousel sectionName="Acerca de" [images]="data.carousel"></app-carousel>
-  <app-article text="Acerca de text"
-               image="https://media.istockphoto.com/photos/child-hands-formig-heart-shape-picture-id951945718?k=6&m=951945718&s=612x612&w=0&h=ih-N7RytxrTfhDyvyTQCA5q5xKoJToKSYgdsJ_mHrv0="
-               layout="right"></app-article>
+  <app-article [text]="data.description"
+               [image]="baseURL + data.image.formats.thumbnail.url"
+               [layout]="data.direction"></app-article>
 </div>
 <app-page-loader *ngIf="!data"></app-page-loader>
