Article component top option added on styling

--- a/lone-wolf-app/src/app/components/article/article.component.html
+++ b/lone-wolf-app/src/app/components/article/article.component.html
@@ -1,4 +1,4 @@
-<div class="article-wrapper" [class.fl-r-reverse]="layout === 'right'">
+<div class="article-wrapper" [class.fl-r-reverse]="layout === 'right'" [class.fl-col]="layout === 'top'">
   <div class="image-column">
     <img [src]="image" alt="Article Image">
   </div>
