components standarization styles structured card componente card interface

--- a/lone-wolf-app/src/app/components/carousel/carousel.component.html
+++ b/lone-wolf-app/src/app/components/carousel/carousel.component.html
@@ -24,6 +24,6 @@
 <div class="ribbon">
   <div>
     <i class="fas fa-circle"></i>
-    <p>{{sectionName}}</p>
+    <p class="headline-text">{{sectionName}}</p>
   </div>
 </div>
