--- a/lone-wolf-app/src/app/components/navigation/navigation.component.scss
+++ b/lone-wolf-app/src/app/components/navigation/navigation.component.scss
@@ -13,7 +13,7 @@
       justify-content: center;
 
       .mat-tab-label-content {
-        text-transform: capitalize;
+        text-transform: uppercase;
         user-select: none;
       }
       .mat-tab-label-active {
