--- a/lone-wolf-app/src/app/components/sections/about/about.component.html
+++ b/lone-wolf-app/src/app/components/sections/about/about.component.html
@@ -1,7 +1,9 @@
 <div *ngIf="data">
   <app-carousel [sectionName]="data.title" [images]="data.carousel"></app-carousel>
-  <app-article [text]="data.description"
+  <div class="content-wrapper">
+    <app-article [text]="data.description"
                [image]="baseURL + data.image.formats.thumbnail.url"
                [layout]="data.direction"></app-article>
+  </div>
 </div>
 <app-page-loader *ngIf="!data"></app-page-loader>
