--- a/lone-wolf-app/src/app/components/sections/schedule/schedule.component.html
+++ b/lone-wolf-app/src/app/components/sections/schedule/schedule.component.html
@@ -1,1 +1,16 @@
 <app-carousel sectionName="Horarios"></app-carousel>
+<section class="calendar-container">
+  <div class="calendar">
+    <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+    <mwl-calendar-week-view
+      [viewDate]="viewDate"
+      [events]="events"
+      [refresh]="refresh"
+      (eventClicked)="handleEvent('Clicked', $event.event)"
+      (eventTimesChanged)="eventTimesChanged($event)"
+      [dayStartHour]="8"
+      [dayEndHour]="17"
+    >
+    </mwl-calendar-week-view>
+  </div>
+</section>
